# python-multi-downloader

./: .gitignore  README.md  pyproject.toml  test_api.py
src/hget/: __init__.py  cli.py  core.py  utils.py
