[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hget"
version = "0.1.0"
description = "A high-performance, parallel downloader CLI and library with aria2c support and native fallback."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
]

[project.scripts]
hget = "hget.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
